force-app/main/default/objects/Partner_Access_Group__c/Partner_Access_Group__c.object-meta.xml
<CustomObject>
    <label>Partner Access Group</label>
    <nameField>
        <displayFormat>PAG-{000000}</displayFormat>
        <label>Partner Access Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Access Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>