force-app/main/default/objects/Partner_Access_Group__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active mapping.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>