force-app/main/default/objects/Partner_Access_Group__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <description>Salesforce Group Id.</description>
    <label>Group Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>